# extrospect-beam

./: .gitmodules  README.md  build.ninja  build.sh  meson.build  meson_options.txt
src/: beam.c  beam.h  common.c  common.h  dwarf_helpers.c  dwarf_helpers.h  erlang-sample.c  erlang-write-perf-map.c  hexdump.c  hexdump.h  macrology.h  perf_helpers.c  perf_helpers.h  proc.c  proc.h  remote.c  remote.h  symbol_counters.c  symbol_counters.h
